Aggiunto l'esempio di grafo non simmetrico.

--- a/README
+++ b/README
@@ -7,6 +7,7 @@ fol3
 
   Esempio minimale: "teoria" dell'addizione per dell'aritmentica
   modulo 3.  Implementazione di:
+
     1. linguaggio (termini e formule);
     2. modello;
     3. interpretazione del linguaggio nel modello.
@@ -18,8 +19,11 @@ fol0
 
 fol1
 
-  Ulteriore guadagno di composizionalità: due modelli aritmetica
-  modulo 3 e grafi.
+  Ulteriore guadagno di composizionalità.  Implementazione di tre modelli:
+
+    1. addizione nell'aritmetica modulo 3;
+    2. grafo non orientato;
+    3. grafo orientato.
 
 generic
 
