Modificato il dominio, implementati la disgiunzione esclusiva e psimplify

--- a/meta/TODO
+++ b/meta/TODO
@@ -1,7 +1,7 @@
 - Aggiungere i test di bool. (fatto e ho aggiunto mulb)
 
 - Implementare la forma prenessa (cominciando dalle funzioni piu facili)
-    psimplify
+    psimplify (fatto)
     nnf
     simplify
     pullquant
@@ -10,7 +10,7 @@
 
 - Rifare l'esempio di pagina 126 in cui si trovano i numeri primi.
 
-- Rifare anche il modello booleano come Harrison (+ ---> xor).
+- Rifare anche il modello booleano come Harrison (+ ---> xor). (fatto)
 
-- In Harrison, il dominio e' una lista.  Da noi e' un predicato.
+- In Harrison, il dominio e' una lista.  Da noi e' un predicato. (fatto)
 - Implementare la sostituzione (da Harrison)
