--- a/meta/TODO
+++ b/meta/TODO
@@ -1,18 +1,23 @@
+- Aggiungere test creativi (eventualmente scambiare input e output).
+
+- Usare gli operatori infissi (or (and P Q) R) ---> (P and Q or R).
+
+- Guardare bene articolo la parte su prenex (p.74).
+
 - Implementare la forma prenessa (cominciando dalle funzioni piu facili)
     psimplify (fatto e corretto)
     nnf (fatto e corretto)
     simplify (provato)
-    pullquant (provato)
-    prenex (provato ma sicuro sbagliato)
-    pnf (provato ma sicuro sbagliato)
+    pullquant (provato ma sicuro sbagliato)
+    prenex (provato)
+    pnf (provato -in prenex.mod- ma sicuro sbagliato)
+    make
 
 - In Harrison, il dominio e' una lista.  Da noi e' un predicato. (provato)
   Cambiare il tipo di model in modo che il dominio sia una lista.
 
-- Rifare l'esempio di pagina 126 in cui si trovano i numeri primi. (provato)
+- Rifare l'esempio di pagina 126 in cui si trovano i numeri primi. 
 
 - Implementare la sostituzione (da Harrison)
 
-- File con libreria di funzioni sulle liste (da recuperare dal vecchio codice). (fatto)
-  Aggiungere anche un predicato numseg. Esempio:
-    numseg 3 6 [3,4,5,6].
+-prenex discutere
