--- a/fol0/README
+++ b/fol0/README
@@ -3,7 +3,12 @@ Elenco dei moduli:
     arith3      Model for Z3
     fol         Semantics for first order logic
     interp      Interpretation of fol in arith3
-    main	    Tests
+    interp4     Interpretation of fol in arith4
+    interpb     Interpretation of fol in bool
+    tests	Tests for the language add, zero, one, eq.
+    main	Tests for arith3.
+    main4	Tests for arith4.
+    mainb	Tests for arithb.
 
 Elementi della segnatura che le interpretazioni devono
 definire/estendere:
